JDK 11 port: review round 1 build/pom fixes
- setuid: document the JDK 17 requirement of jetty-setuid-jna in setuid.mod
  and in the status file; extend the class-file version scan to the maven://
  artifacts of the shipped modules
- README.md / README.adoc: ee11-deploy -> ee10-deploy, EE8-EE11 -> EE8-EE10
- demo root index.html: remove the empty EE11 demos column
- jakarta.mail-api version centralised in a root property
- remove the dead maven-build-cache/njord properties, the njord
  pluginManagement entry and the unused hibernate-models entry
- dependabot: drop the /jetty-ee11 entry
- status file: complete the dependency downgrade table, fix the commit
  attributions, document the record->class list and the remaining deviations